# tecentHAIMCP

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/hai_mcp/: __init__.py  __main__.py  config.py  errors.py  hai_client.py  server.py  ssh_client.py
src/hai_mcp/tools/: __init__.py  _common.py  connection.py  discovery.py  instances.py  remote.py
tests/: test_config.py  test_errors.py  test_hai_client.py  test_ssh_client.py
